# backend/src/Persistence/Entities/Identity/UserOrgMembership.cs
@@ -1,3 +1,4 @@
+using Microsoft.EntityFrameworkCore;
 using UKPS.Api.Persistence.Enums;
 
 namespace UKPS.Api.Persistence.Entities.Identity;
@@ -8,8 +9,8 @@ internal sealed class UserOrgMembership
     public required UserRole UserRole { get; set; }
     public required UserOrgStatus Status
     {
-        get => _status;
-        init => _status = value;
+        get => _statusManager.State;
+        init => _statusManager = new UserOrgMembershipStateMachine(value);
     }
     public required PharmaceuticalEntity AllowedPharmaceuticalEntity { get; set; }
     public required DateTime CreatedAt { get; set; }
@@ -19,38 +20,28 @@ internal sealed class UserOrgMembership
     public int OrganisationId { get; set; }
     public Organisation? Organisation { get; set; }
 
-    private UserOrgStatus _status;
+    private UserOrgMembershipStateMachine _statusManager = new UserOrgMembershipStateMachine(
+        UserOrgStatus.AwaitingSetup
+    );
+
+    internal StateMachineTransitionResult<UserOrgStatus> TryFinaliseSetup() =>
+        _statusManager.TrySendCommand(UserOrgMembershipStateMachine.Command.FinaliseSetup);
+
+    internal void FinaliseSetup() =>
+        _statusManager.SendCommand(UserOrgMembershipStateMachine.Command.FinaliseSetup);
+
+    internal StateMachineTransitionResult<UserOrgStatus> TryDeactivate() =>
+        _statusManager.TrySendCommand(UserOrgMembershipStateMachine.Command.Deactivate);
+
+    internal void Deactivate() =>
+        _statusManager.SendCommand(UserOrgMembershipStateMachine.Command.Deactivate);
+
+    internal StateMachineTransitionResult<UserOrgStatus> TryReactivate() =>
+        _statusManager.TrySendCommand(UserOrgMembershipStateMachine.Command.Reactivate);
 
     internal bool IsAuthorised()
     {
         UserOrgStatus[] authorisedStatuses = [UserOrgStatus.Active, UserOrgStatus.Inactive];
         return authorisedStatuses.Contains(Status);
-    }
-
-    internal void MarkAsActive()
-    {
-        UserOrgStatus[] invalidInitialStates = [UserOrgStatus.Deactivated, UserOrgStatus.Rejected];
-
-        if (invalidInitialStates.Contains(Status))
-        {
-            throw new InvalidOperationException(
-                $"User organisation membership cannot be marked as active when its current status is '{Status}'."
-            );
-        }
-        _status = UserOrgStatus.Active;
-    }
-
-    internal void Deactivate()
-    {
-        UserOrgStatus[] validInitialStates = [UserOrgStatus.Deactivated, UserOrgStatus.Rejected];
-
-        if (!validInitialStates.Contains(Status))
-        {
-            throw new InvalidOperationException(
-                $"User organisation membership cannot be marked be deactivated when its current status is '{Status}'."
-            );
-        }
-
-        _status = UserOrgStatus.Deactivated;
     }
 }
